--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 git+https://github.com/Rapptz/discord.py@rewrite
 git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]
+python3
 Imgurpython
 requests
 asyncio
